@@ -4,6 +4,10 @@ Summary of important user-visible changes for releases of the signal package
 signal-x.y.z   Release Date: yyyy-mm-dd   Release Manager: 
 ===============================================================================
 
+ ** The function `marcumq' was imported from the communications package and has
+    been completely rewritten to improve performance and fix computational
+    errors.
+
  ** Package is no longer automatically loaded
 
  ** The functions `__ellip_ws' and `__ellip_ws_min' have been removed (they
